<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calc">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circle"
            android:contentDescription="@string/home"
            android:scaleType="fitCenter"
            android:layout_marginStart="24dp"
            android:src="@drawable/home_button__1_" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/basic_calculator"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="26dp" />




    </androidx.appcompat.widget.Toolbar>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputeq"
        app:layout_constraintVertical_bias="0.65999997">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/clear"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/exponentbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/exponent"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/parenthesisbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/parenthesis"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/backbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/backspace"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/multiplybtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/multiply"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/dividebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/divide"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/addbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/add"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/subtractbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/subtract"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ninebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/nine"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/eightbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/eight"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/sevenbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/seven"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/sixbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/six"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fivebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/five"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/fourbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/four"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/threebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/three"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/twobtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/two"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/onebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/one"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/zerobtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/zero"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/pointbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/point"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/equalsbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/equals"
                android:textColor="@color/black"
                tools:ignore="VisualLintButtonSize" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/inputeq"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/input_values"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />


</androidx.constraintlayout.widget.ConstraintLayout>