<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EchelonFormCalculator">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="240dp"
        android:layout_height="187dp"
        android:layout_marginTop="40dp"

        android:src="@drawable/welcome_for_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        android:contentDescription="@string/welcome_to_math_calculators_for_everyone"/>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/black"
            android:text="@string/intro_blurb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/checkLink"
            android:layout_width="321dp"
            android:layout_height="51dp"
            android:layout_marginTop="44dp"
            android:textColor="@color/black"
            android:text="@string/check_links"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/linearSystLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_marginTop="10dp"
            android:linksClickable="true"
            android:text="@string/syst_o_le_title"
            android:textColor="@color/blue"
            android:textColorLink="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkLink" />
        <TextView
            android:id="@+id/echelonLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_marginTop="10dp"
            android:linksClickable="true"
            android:text="@string/echelon_form"
            android:textColor="@color/blue"
            android:textColorLink="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearSystLink" />
        <TextView
            android:id="@+id/inverseLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_marginTop="10dp"
            android:linksClickable="true"
            android:text="@string/inverse_matrix"
            android:textColor="@color/blue"
            android:textColorLink="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/echelonLink" />
        <TextView
            android:id="@+id/determinantLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_marginTop="10dp"
            android:linksClickable="true"
            android:text="@string/determinant"
            android:textColor="@color/blue"
            android:textColorLink="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inverseLink" />
        <TextView
            android:id="@+id/nullSpaceLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_marginTop="10dp"
            android:linksClickable="true"
            android:text="@string/null_space"
            android:textColor="@color/blue"
            android:textColorLink="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/determinantLink"
            android:layout_marginBottom="100dp"
            />



        <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/home"
                android:scaleType="fitCenter"
                android:layout_marginStart="24dp"
                android:src="@drawable/home_button__1_" />

            <TextView
                android:id="@+id/fragmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/introduction"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />
    </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
